database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb-anog
  labels:
    app: mariadb-anog
spec:


  volumes:
  - name: anog-volume
    persistentVolumeClaim:
      claimName: anog-pvc


  containers:
  - name: mariadb-anog
    image: beefr/mariadb-qcm:latest
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: anog-volume
