internal-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: anog-service
  labels:
    app: anog
spec:
  selector:
    app: anog
  ports:
    - name: python-port
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: tcp-mysql
      port: 3306
      targetPort: 3306
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: anog
  name: mariadb-anog-service
spec:
  type: ClusterIP
  selector: 
    app: mariadb-anog
  ports:
  - name: tcp-mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
