service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anog
  labels:
    app: anog
spec:
  type: NodePort 
  selector:
    app: anog-cont
  ports:
    - name: python-port
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30036
    - name: tcp-mysql
      port: 3306
      targetPort: 3306
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb-anog
  name: mariadb-anog-service

spec:
  type: ClusterIP
  selector: 
    app: mariadb-anog
  ports:
  - name: tcp-mysql
    port: 3306
    protocol: TCP
    targetPort: 3306


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-cont
  name: jenkins-service
spec:
  type: NodePort
  selector: 
    app: jenkins-cont
  ports: 

  - name: jenkins-port1
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30037
 
  - name: jenkins-port2
    port: 50000
    protocol: TCP
    targetPort: 50000
