ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: anog-ingress
spec:
  rules:
  - host: anog.fr
    http:
      paths:
      - path: /testpath        
        pathType: Prefix
        backend:
          service:
            name: anog-service
            port: 
              number: 8080
